--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
@@ -5,55 +5,50 @@
 
 <div class="col-12">
     <div class="row">
-        {% if "billing_address.salutation" in addressFields %}
-            <div class="col-12 col-sm-4">
-                <div class="input-unit"
-                    {% if "billing_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
-                    <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
-                    <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "billing_address.salutation" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div v-if="optionalAddressFields.de.includes('billing_address.salutation')" class="col-12 col-sm-4">
+            <div class="input-unit"
+                {% if "billing_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
+                <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
+                <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "billing_address.salutation" in addressFieldsRequired %}*{% endif %}</label>
             </div>
-        {% endif %}
+        </div>
     </div>
 </div>
 
 <div class="col-12">
     <div class="row">
-        {% if "billing_address.name1" in addressFields %}
-            <div class="col-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
-                <div class="input-unit" data-validate="text" data-model="name1">
-                    <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
-                    <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
-                </div>
+        <div
+            class="col-12 col-sm-6"
+            v-if="(optionalAddressFields.de.includes('billing_address.salutation') && value.addressSalutation === 2) || optionalAddressFields.de.includes('billing_address.name1')">
+            <div class="input-unit" data-validate="text" data-model="name1">
+                <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
+                <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
             </div>
-        {% endif %}
+        </div>
 
-        {% if "billing_address.vatNumber" in addressFields %}
-            <div class="col-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
-                <div class="input-unit"
-                     {% if "billing_address.vatNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="vatNumber">
-                    <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber"  @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
-                    <label :for="'txtVatNumber' + _uid">{{ trans("Ceres::Template.addressVatNumber") }}{% if "billing_address.vatNumber" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div
+            class="col-12 col-sm-6"
+            v-if="(optionalAddressFields.de.includes('billing_address.salutation') && value.addressSalutation === 2) || optionalAddressFields.de.includes('billing_address.vatNumber')">
+            <div class="input-unit"
+                    {% if "billing_address.vatNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="vatNumber">
+                <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber"  @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
+                <label :for="'txtVatNumber' + _uid">{{ trans("Ceres::Template.addressVatNumber") }}{% if "billing_address.vatNumber" in addressFieldsRequired %}*{% endif %}</label>
             </div>
-        {% endif %}
+        </div>
     </div>
 </div>
 
 <div class="col-12">
     <div class="row">
-
-        {% if "billing_address.title" in addressFields %}
-            <div class="col-12 col-sm-4">
-                <div class="input-unit"
-                     {% if "billing_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
-                    <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
-                    <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "billing_address.title" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div v-if="optionalAddressFields.de.includes('billing_address.title')" class="col-12 col-sm-4">
+            <div class="input-unit"
+                    {% if "billing_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
+                <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
+                <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "billing_address.title" in addressFieldsRequired %}*{% endif %}</label>
             </div>
-        {% endif %}
+        </div>
 
-        {% if not ("billing_address.name1" in addressFields and "billing_address.salutation" not in addressFields) %}
+        <template v-if="!optionalAddressFields.de.includes('billing_address.name1') && !optionalAddressFields.de.includes('billing_address.salutation')">
             <div class="col-12 col-sm-4" v-if="value.addressSalutation !== 2">
                 <div class="input-unit" data-validate="text" data-model="name2">
                     <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2"  @input="emitInputEvent('name2', $event.target.value)" data-autofocus>
@@ -66,7 +61,7 @@
                     <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
                 </div>
             </div>
-        {% endif %}
+        </template>
 
         {% if "billing_address.name1" in addressFields %}
             <div class="col-xs-12 col-sm-8" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
