workaround for when ios uses document height for calculatiing background-size instead of viewport-height

--- a/resources/scss/ceres/views/Category/_category-list.scss
+++ b/resources/scss/ceres/views/Category/_category-list.scss
@@ -160,3 +160,10 @@
         }
     }
 }
+
+/* IOS compatibility */
+html.ios {
+    .parallax-img-container .parallax-img-container-inner[style^='background-image'] {
+        background-size: contain;
+    }
+}
