--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
@@ -6,56 +6,56 @@
 
 <div class="col-12">
     <div class="row">
-        {% if "billing_address.salutation" in addressFields %}
-            <div class="col-12 col-sm-4">
-                <div class="input-unit"
-                    {% if "billing_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
-                    <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
-                    <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "billing_address.salutation" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div v-if="isInOptionalFields('gb', 'billing_address.salutation')" class="col-12 col-sm-4">
+            <div
+                class="input-unit"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.salutation'), validateType: ''}">
+                <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
+                <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "billing_address.salutation" in addressFieldsRequired %}*{% endif %}</label>
             </div>
-        {% endif %}
+        </div>
     </div>
 </div>
 
 <div class="col-12">
     <div class="row">
-        {% if "billing_address.name1" in addressFields %}
-            <div class="col-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
-                <div class="input-unit" data-validate="text" data-model="name1">
-                    <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
-                    <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
-                </div>
+        <div
+            class="col-12 col-sm-6"
+            v-if="(isInOptionalFields('gb', 'billing_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'billing_address.name1')">
+            <div class="input-unit" data-validate="text" data-model="name1">
+                <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
+                <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
             </div>
-        {% endif %}
+        </div>
 
-        {% if "billing_address.vatNumber" in addressFields %}
-            <div class="col-12 col-sm-6" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
-                <div class="input-unit"
-                     {% if "billing_address.vatNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="vatNumber">
-                    <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber" @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
-                    <label :for="'txtVatNumber' + _uid">{{ trans("Ceres::Template.addressVatNumber") }}{% if "billing_address.vatNumber" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div
+            class="col-12 col-sm-6"
+            v-if="(isInOptionalFields('gb', 'billing_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'billing_address.vatNumber')">
+            <div
+                class="input-unit"
+                data-model="vatNumber"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.vatNumber'), validateType: 'text'}">
+                <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber" @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
+                <label :for="'txtVatNumber' + _uid">{{ trans("Ceres::Template.addressVatNumber") }}{% if "billing_address.vatNumber" in addressFieldsRequired %}*{% endif %}</label>
             </div>
-        {% endif %}
+        </div>
     </div>
 </div>
 
 
 <div class="col-12">
     <div class="row">
-
-        {% if "billing_address.title" in addressFields %}
-            <div class="col-12 col-sm-4">
-                <div class="input-unit"
-                     {% if "billing_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
-                    <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title" @input="emitInputEvent('title', $event.target.value)" data-autofocus>
-                    <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "billing_address.title" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div v-if="isInOptionalFields('gb', 'billing_address.title')" class="col-12 col-sm-4">
+            <div
+                class="input-unit"
+                data-model="title"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.title'), validateType: 'text'}">
+                <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title" @input="emitInputEvent('title', $event.target.value)" data-autofocus>
+                <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "billing_address.title" in addressFieldsRequired %}*{% endif %}</label>
             </div>
-        {% endif %}
+        </div>
 
-        {% if not ("billing_address.name1" in addressFields and "billing_address.salutation" not in addressFields) %}
+        <template v-if="!isInOptionalFields('gb', 'billing_address.name1') && !isInOptionalFields('gb', 'billing_address.salutation')">
             <div class="col-12 col-sm-4" v-if="value.addressSalutation !== 2">
                 <div class="input-unit" data-validate="text">
                     <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2" @input="emitInputEvent('name2', $event.target.value)" data-model="name2" data-autofocus>
@@ -69,47 +69,50 @@
                     <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
                 </div>
             </div>
-        {% endif %}
+        </template>
 
-        {% if "billing_address.name1" in addressFields %}
-            <div class="col-xs-12 col-sm-8" {% if "billing_address.salutation" in addressFields %}v-if="value.addressSalutation === 2"{% endif %}>
-                <div class="input-unit" data-validate="text" data-model="contactPerson">
-                    <input type="text" name="lastName" :id="'txtContactPerson' + _uid" :value="value.contactPerson" @input="emitInputEvent('contactPerson', $event.target.value)">
-                    <label :for="'txtContactPerson' + _uid">{{ trans("Ceres::Template.addressContactPerson") }}*</label>
-                </div>
+        <div
+            v-if="(isInOptionalFields('gb', 'billing_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'billing_address.name1')"
+            class="col-xs-12 col-sm-8">
+            <div class="input-unit" data-validate="text" data-model="contactPerson">
+                <input type="text" name="lastName" :id="'txtContactPerson' + _uid" :value="value.contactPerson" @input="emitInputEvent('contactPerson', $event.target.value)">
+                <label :for="'txtContactPerson' + _uid">{{ trans("Ceres::Template.addressContactPerson") }}*</label>
             </div>
-        {% endif %}
+        </div>
 
-        {% if "billing_address.name4" in addressFields %}
-            <div class="col-sm-4">
-                <div class="input-unit"
-                     {% if "billing_address.name4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name4">
-                    <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
-                    <label :for="'txtAdditionalName' + _uid">{{ trans("Ceres::Template.addressGBNameAffix") }}{% if "billing_address.name4" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div v-if="isInOptionalFields('gb', 'billing_address.name4')" class="col-sm-4">
+            <div
+                class="input-unit"
+                data-model="name4"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.name4'), validateType: 'text'}">
+                <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
+                <label :for="'txtAdditionalName' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressGBNameAffix") }}' | transformRequiredLabel(isInOptionalFields('gb', 'billing_address.name4')) }
+                </label>
             </div>
-        {% endif %}
+        </div>
 
-        {% if "billing_address.birthday" in addressFields %}
-            <div class="col-12 col-sm-4">
-                <div class="input-unit"
-                     {% if "billing_address.birthday" in addressFieldsRequired %}data-validate="date" {% endif %}data-model="birthday">
-                    <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
-                    <label :for="'txtBirthdate' + _uid">{{ trans("Ceres::Template.addressBirthdate") }}{% if "billing_address.birthday" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div v-if="isInOptionalFields('gb', 'billing_address.birthday')" class="col-12 col-sm-4">
+            <div
+                class="input-unit"
+                data-model="birthday"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.birthday'), validateType: 'date'}">
+                <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
+                <label :for="'txtBirthdate' + _uid">{{ trans("Ceres::Template.addressBirthdate") }}{% if "billing_address.birthday" in addressFieldsRequired %}*{% endif %}</label>
             </div>
-        {% endif %}
+        </div>
 
-        {% if "billing_address.phoneNumber" in addressFields %}
-            <div class="col-12 col-sm-4">
-                <div class="input-unit"
-                     {% if "billing_address.phoneNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="telephone">
-                    <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
-                    <label :for="'txtTelephone' + _uid">{{ trans("Ceres::Template.addressTelephone") }}{% if "billing_address.phoneNumber" in addressFieldsRequired %}*{% endif %}</label>
-                </div>
+        <div v-if="isInOptionalFields('gb', 'billing_address.phoneNumber')" class="col-12 col-sm-4">
+            <div
+                class="input-unit"
+                data-model="telephone"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.phoneNumber'), validateType: 'text'}">
+                <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
+                <label :for="'txtTelephone' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInOptionalFields('gb', 'billing_address.phoneNumber')) }
+                </label>
             </div>
-        {% endif %}
-
+        </div>
     </div>
 </div>
 
@@ -136,7 +139,7 @@
 <div class="col-12">
     <div class="row">
         {% if "billing_address.address3" in addressFields %}
-            <div class="col-12 col-sm-12">
+            <div v-if="isInOptionalFields('gb', 'billing_address.address3')" class="col-12 col-sm-12">
                 <div class="input-unit"
                      {% if "billing_address.address3" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address3">
                     <input type="text" name="buildingName" :id="'decorateAddress0' + _uid" :value="value.address3"  @input="emitInputEvent('address3', $event.target.value)">
