--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
@@ -1,14 +1,15 @@
 {{ component( "Ceres::Customer.Components.SalutationSelect" ) }}
 
-{% set addressFields = config("Ceres.delivery_address.show") | split(', ') %}
-{% set addressFieldsRequired = config("Ceres.delivery_address.require") | split(', ') %}
-
 <div class="col-12">
     <div class="row">
         <div v-if="isInOptionalFields('de', 'delivery_address.salutation')" class="col-12 col-sm-4">
-            <div class="input-unit"{% if "delivery_address.salutation" in addressFieldsRequired %}data-validate{% endif %}>
+            <div
+                class="input-unit"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.salutation'), validateType: ''}">
                 <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
-                <label :for="'txtSalutation' + _uid">{{ trans("Ceres::Template.addressSalutation") }}{% if "delivery_address.salutation" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtSalutation' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressSalutation") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.salutation')) }
+                </label>
             </div>
         </div>
     </div>
@@ -19,9 +20,14 @@
         <div
             class="col-12 col-sm-6"
             v-if="(isInOptionalFields('de', 'delivery_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('de', 'delivery_address.name1')">
-            <div class="input-unit" {% if "delivery_address.name1" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name1">
+            <div
+                class="input-unit"
+                data-model="name1"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.name1'), validateType: 'text'}">
                 <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)">
-                <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}{% if "delivery_address.name1" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtCompany' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressCompany") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.name1')) }
+                </label>
             </div>
         </div>
     </div>
@@ -30,9 +36,14 @@
 <div class="col-12">
     <div class="row">
         <div v-if="isInOptionalFields('de', 'delivery_address.title')" class="col-12 col-sm-4">
-            <div class="input-unit" {% if "delivery_address.title" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="title">
+            <div
+                class="input-unit"
+                data-model="title"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.title'), validateType: 'text'}">
                 <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title" @input="emitInputEvent('title', $event.target.value)">
-                <label :for="'txtTitle' + _uid">{{ trans("Ceres::Template.addressTitle") }}{% if "delivery_address.title" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtTitle' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressTitle") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.title')) }
+                </label>
             </div>
         </div>
 
@@ -65,17 +76,27 @@
 
         {# Additional name #}
         <div v-if="isInOptionalFields('de', 'delivery_address.name4')" class="col-12 col-sm-4">
-            <div class="input-unit" {% if "delivery_address.name4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="name4">
+            <div
+                class="input-unit"
+                data-model="name4"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.name4'), validateType: 'text'}">
                 <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
-                <label :for="'txtAdditionalName' + _uid">{{ trans("Ceres::Template.addressAdditionalName") }}{% if "delivery_address.name4" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtAdditionalName' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressAdditionalName") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.name4')) }
+                </label>
             </div>
         </div>
 
         {# Phone number #}
         <div v-if="isInOptionalFields('de', 'delivery_address.phoneNumber')" class="col-12 col-sm-4">
-            <div class="input-unit" {% if "delivery_address.phoneNumber" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="telephone">
+            <div
+                class="input-unit"
+                data-model="telephone"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.phoneNumber'), validateType: 'text'}">
                 <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
-                <label :for="'txtTelephone' + _uid">{{ trans("Ceres::Template.addressTelephone") }}{% if "delivery_address.phoneNumber" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'txtTelephone' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.phoneNumber')) }
+                </label>
             </div>
         </div>
     </div>
@@ -125,10 +146,15 @@
         </div>
 
         <div v-if="isInOptionalFields('de', 'delivery_address.address4')" class="col-12 col-sm-6">
-            <div class="input-unit" {% if "delivery_address.address4" in addressFieldsRequired %}data-validate="text" {% endif %}data-model="address4">
+            <div
+                class="input-unit"
+                data-model="address4"
+                v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'delivery_address.address4'), validateType: 'text'}">
                 <input type="text" name="decorateAddress" :id="'decorateAddress1' + _uid"
                         :value="value.address4" @input="emitInputEvent('address4', $event.target.value)">
-                <label :for="'decorateAddress1' + _uid">{{ trans("Ceres::Template.addressAdditionalAddress2") }}{% if "delivery_address.address4" in addressFieldsRequired %}*{% endif %}</label>
+                <label :for="'decorateAddress1' + _uid">
+                    ${ '{{ trans("Ceres::Template.addressAdditionalAddress2") }}' | transformRequiredLabel(isInOptionalFields('de', 'delivery_address.address4')) }
+                </label>
             </div>
         </div>
     </div>
