UPDATE address widget WIP

--- a/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/AddressInputGroup.twig
@@ -28,7 +28,9 @@
                 @country-changed="onSelectedCountryChanged($event)"
                 @state-changed="emitInputEvent('stateId', $event)"
                 :country-list="{{ services.country.getActiveCountriesList() | filterFields(['id','currLangName', 'isoCode2', 'states.id', 'states.name']) | json_encode }}"
-                :address-type="addressType">
+                :address-type="addressType"
+                :optional-address-fields="optionalAddressFields"
+                :required-address-fields="requiredAddressFields">
             </country-select>
         </div>
     </div>
