# Updated: * Moved the urlPicker logic into twig macro

--- a/resources/views/Widgets/Common/ImageBoxWidget.twig
+++ b/resources/views/Widgets/Common/ImageBoxWidget.twig
@@ -1,44 +1,15 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
+{% import "Ceres::Widgets.Helper.TwigWidgetMacros" as WidgetHelpers %}
 
 {{ Twig.import("ItemName", "Ceres::PageDesign.Macros.ItemName") }}
 
 {% set style            = widget.settings.style.mobile %}
 {% set headline         = widget.settings.headline.mobile %}
 {% set imageSize        = widget.settings.imageSize.mobile %}
-{% set urlPickerType    = widget.settings.urlPicker.type.mobile %}
-{% set urlPickerValue   = widget.settings.urlPicker.value.mobile %}
+{% set urlType          = widget.settings.url.type.mobile %}
+{% set urlValue         = widget.settings.url.value.mobile %}
 
-{{ Twig.set("name", "" | json_encode) }}
-{{ Twig.set("url", "" | json_encode) }}
-{{ Twig.set("imageUrl", "" | json_encode) }}
-
-{% if urlPickerType == 'category' %}
-
-    {{ Twig.set("category", Twig.call("services.category.get", [urlPickerValue])) }}
-
-    {{ Twig.set("name", "category.details[0].name") }}
-    {{ Twig.set("url", Twig.call("services.category.getURL", ["$category"])) }}
-    {{ Twig.set("imageUrl", "category.details[0].imagePath") }}
-
-    {{ Twig.if("imageUrl | trim is not empty") }}
-    {{ Twig.set("imageUrl", "\"documents/\" ~ imageUrl") }}
-    {{ Twig.endif() }}
-
-{% elseif urlPickerType == 'item' %}
-
-    {{ Twig.set("itemData", Twig.call("services.item.getVariation", [urlPickerValue])) }}
-    {{ Twig.set("itemData", "itemData.documents[0].data") }}
-    {{ Twig.set("itemImage", "itemData.images | itemImages | orderByKey('position') | first") }}
-
-    {{ Twig.set("name", Twig.call("ItemName.get", ["$itemData | itemName", "$itemData.variation.bundleType"])) }}
-    {{ Twig.set("url", "itemData | itemURL") }}
-    {{ Twig.set("imageUrl", "itemImage.url") }}
-
-{% endif %}
-
-{% if urlPickerType == 'external' or urlPickerType == 'file' %}
-    {{ Twig.set("imageUrl", urlPickerValue | json_encode) }}
-{% endif %}
+{{ WidgetHelpers.getUrlPicker(urlValue, urlType) }}
 
 {% if style != "no-caption" and headline is not empty %}
     {{ Twig.setEscaped("name", headline) }}
