added default appearance fallback

--- a/resources/views/Widgets/Checkout/CouponWidget.twig
+++ b/resources/views/Widgets/Checkout/CouponWidget.twig
@@ -5,5 +5,5 @@
 {{ Twig.component("Ceres::Basket.Components.Coupon") }}
 
 <div class="widget widget-coupon">
-    <coupon appearance="{{ appearance }}"></coupon>
+    <coupon appearance="{{ appearance | default("primary") }}"></coupon>
 </div>
