--- a/resources/views/Widgets/Common/NewsletterWidget.twig
+++ b/resources/views/Widgets/Common/NewsletterWidget.twig
@@ -11,6 +11,6 @@
 
 <div class="widget widget-newsletter">
     <div class="widget-inner">
-        <newsletter-input appearance="{{ appearance }}" :title="{{ title }}" :sub-title="{{ subTitle }}" :show-name-inputs="{{ showNameInputs }}" :show-privacy-policy-checkbox="{{ showPrivacyPolicyCheckbox }}" :email-folder="{{ emailFolder }}"></newsletter-input>
+        <newsletter-input appearance="{{ appearance | default("primary") }}" :title="{{ title }}" :sub-title="{{ subTitle }}" :show-name-inputs="{{ showNameInputs }}" :show-privacy-policy-checkbox="{{ showPrivacyPolicyCheckbox }}" :email-folder="{{ emailFolder }}"></newsletter-input>
     </div>
 </div>
