--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -13631,7 +13631,7 @@ $menu-big-menu-li-bg-hover		: $brand-primary;
 $menu-big-menu-li-color			: $white;
 $menu-big-menu-li-color-hover	: $text-color;
 // megamenu
-$megamenu-bg 					: $white;
+$megamenu-bg 					: #000000;
 $megamenu-color-top-btn			: $brand-primary;
 $megamenu-color-bottom-btn		: $black;
 $megamenu-btn-hover 			: darken($top-bar-basket-btn, 20%);
