--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -98,7 +98,7 @@ $custom-colors: (
 ) !default;
 
 $top-bar-bg:            $gray-dark;
-$top-bar-color:         #fff;
+$top-bar-color:         #000000;
 $top-bar-basket-btn:    $brand-primary;
 $top-bar-basket-color:  #fff;
 
